Switching to Text editor, missing plus sign to open the tool shelf #48198

Closed
opened 2016-04-19 18:23:19 +02:00 by Reiner Prokein · 8 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

2.77

Short description of error

The text editor lacks of the plus sign to open the Tool Shelf when you switch from let's say 3D view to text editor.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Open Blender. In 3D view switch to Text editor. Have a look for the plus sign that usually indicates that there is a tool shelf at the right or left side. It is missing.

When you open the tool shelf for one time, like with ctrl + t, and close it, then the plus sign will become visible.

missingplusbutton.jpg

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) 2.77 **Short description of error** The text editor lacks of the plus sign to open the Tool Shelf when you switch from let's say 3D view to text editor. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open Blender. In 3D view switch to Text editor. Have a look for the plus sign that usually indicates that there is a tool shelf at the right or left side. It is missing. When you open the tool shelf for one time, like with ctrl + t, and close it, then the plus sign will become visible. ![missingplusbutton.jpg](https://archive.blender.org/developer/F304393/missingplusbutton.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tiles

Added subscriber: @tiles

Added subscriber: @gwentiv

Added subscriber: @gwentiv

Verified on 2.77a abf6f08 Win 10/64

On the same subject: this toolshelf is called with Ctrl T (windows), whereas 3D viewport, ImageEditor, MovieClip Editor, Node editor for instance use "T" by itself. Of course it is impossible here because it would collide with "t" as a character, but it is not very consistent.
The panel is called "Properties" in fact, not "toolshef", and yet it uses "T" and not "N" (because of "create text block" I guess) and appears left instead of right as properties panels do… A bit confusing…

Verified on 2.77a abf6f08 Win 10/64 On the same subject: this toolshelf is called with Ctrl T (windows), whereas 3D viewport, ImageEditor, MovieClip Editor, Node editor for instance use "T" by itself. Of course it is impossible here because it would collide with "t" as a character, but it is not very consistent. The panel is called "Properties" in fact, not "toolshef", and yet it uses "T" and not "N" (because of "create text block" I guess) and appears left instead of right as properties panels do… A bit confusing…

This issue was referenced by dd423a6818

This issue was referenced by dd423a6818cc8132ba073dfbeb66cb40d3f09611
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

@gwentiv, these inconsistencies are indeed annoying, but they require fixing the shortcut conflicts first. Added a note to the issue tracker of the keymap team so we will try to address with the keymap revamp.

@gwentiv, these inconsistencies are indeed annoying, but they require fixing the shortcut conflicts first. Added a note to the issue tracker of the keymap team so we will try to address with the keymap revamp.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48198
No description provided.